--- a/a-react-weather/src/components/weather.css
+++ b/a-react-weather/src/components/weather.css
@@ -2,16 +2,27 @@
 
 .main{
     width: 700px;
-    border-radius: 15px;
+    border-radius: 20px;
     background-color: #01579b;
+}
+
+.top{
+    height: 60px;
+    background-color: #424242;
+    color: whitesmoke;
+    padding: 10px;
+    border-radius: 20px 20px 0 0;
+    font-family: 'Recursive', sans-serif;
+    display: flex;
+    justify-content: space-between;
 }
 
 .header{
     background-color: #424242;
     color: whitesmoke;
-    padding: 10px;
-    font-size: 28px;
-    border-radius: 15px;
+    margin: 10px 0px 0px 10px;
+    font-size: 25px;
+    border-radius: 20px 20px 0 0;
     font-family: 'Recursive', sans-serif;
 }
 
@@ -28,4 +39,24 @@
     color: whitesmoke;
     font-family: 'Recursive', sans-serif;
     font-size: 18px;
+}
+
+.flex{
+    display: flex;
+    justify-content: space-between;
+}
+
+.sunrise-sunset{
+    padding: 15px;
+    color: whitesmoke;
+    font-family: 'Recursive', sans-serif;
+    font-size: 16px;
+}
+
+.description{
+    padding: 15px;
+    color: whitesmoke;
+    font-family: 'Recursive', sans-serif;
+    font-size: 24px;
+    font-weight: 600;
 }
